--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>My GitHub Page</title></head>
 <body>
-    <h1>Hello, GitHub Pages!</h1>
+    <h1>Welcome to My GitHub Page!</h1>
+    <p>This page contains my awesome project!</p>
+    <a href="https://github.com/yourusername/yourrepository">Visit the repository</a>
 </body>
 </html>
-
